<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="team.standalone.feature.resetpassword.ResetPasswordVerificationFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:context=".ui.auth.forgotpassword.ForgotPasswordVerificationFragment">

        <TextView
            android:id="@+id/textView88"
            style="@style/FumiyaTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:includeFontPadding="false"
            android:textFontWeight="500"
            android:textSize="16sp"
            android:text="@string/fragment_reset_password_verification_header"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView9"
            style="@style/FumiyaTextStyle"
            android:layout_marginTop="25dp"
            android:includeFontPadding="false"
            android:lineSpacingMultiplier="1.2"
            android:textFontWeight="400"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fragment_reset_password_verification_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView88" />

        <TextView
            android:id="@+id/textView89"
            style="@style/FumiyaTextStyle"
            android:layout_marginTop="15dp"
            android:includeFontPadding="false"
            android:lineSpacingMultiplier="1.2"
            android:textFontWeight="400"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fragment_reset_password_verification_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/FumiyaTextStyle"
            android:layout_marginTop="15dp"
            android:lineSpacingMultiplier="1.2"
            android:includeFontPadding="false"
            android:textFontWeight="400"
            android:text="@string/fragment_reset_password_verification_note_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView89" />

        <TextView
            android:id="@+id/textView90"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/FumiyaTextStyle"
            android:layout_marginTop="15dp"
            android:includeFontPadding="false"
            android:lineSpacingMultiplier="1.2"
            android:textFontWeight="400"
            android:text="@string/fragment_reset_password_verification_note_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <TextView
            android:id="@+id/tv_back"
            android:onClick="@{() -> fragment.onBack()}"
            style="@style/FumiyaTextStyle"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="40dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:includeFontPadding="false"
            android:lineSpacingMultiplier="1.2"
            android:padding="5dp"
            android:textFontWeight="400"
            android:textSize="12sp"
            android:text="@string/fragment_reset_password_verification_back_to_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView90"
            app:underlineText="@{true}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>