<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="team.standalone.feature.resetpassword.ResetPasswordViewModel" />
    </data>

    <ScrollView
        android:id="@+id/input_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView88"
                style="@style/FumiyaTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:includeFontPadding="false"
                android:text="@string/fragment_reset_password_header"
                android:textAlignment="center"
                android:textFontWeight="500"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView9"
                style="@style/FumiyaTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:includeFontPadding="false"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/fragment_reset_password_description"
                android:textFontWeight="400"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView88" />

            <TextView
                android:id="@+id/tv_label_email"
                style="@style/FumiyaTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:includeFontPadding="false"
                android:text="@string/fragment_reset_password_email"
                android:textFontWeight="400"
                app:layout_constraintBottom_toTopOf="@+id/emailTextInputLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextInputLayout"
                style="@style/Material3.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:includeFontPadding="false"
                app:errorEnabled="true"
                app:errorIconTint="@color/colorInputError"
                app:errorTextColor="@color/colorInputError"
                app:formError="@{@string/fragment_reset_password_validation_invalid_email}"
                app:formHasError="@{viewModel.emailAddress.hasError}"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_email_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="@font/noto_sans_jp_regular"
                    android:includeFontPadding="false"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:minLines="1"
                    android:text="@={viewModel.emailAddress.input}"
                    android:textColor="@color/black"
                    android:textFontWeight="400"
                    android:textSize="14sp"
                    app:errorIconTint="@color/colorInputError"
                    app:errorTextColor="@color/colorInputError" />

                <requestFocus />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView14"
                style="@style/FumiyaTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:includeFontPadding="false"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/fragment_reset_password_note"
                android:textFontWeight="400"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout" />

            <Button
                android:id="@+id/btn_send"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="48dp"
                android:fontFamily="@font/noto_sans_jp_regular"
                android:includeFontPadding="false"
                android:onClick="@{() ->viewModel.send()}"
                android:text="@string/fragment_reset_password_btn_send"
                android:textFontWeight="400"
                android:textSize="16sp"
                app:cornerRadius="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView14"
                app:strokeColor="@color/white"
                app:strokeWidth="1dp" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>